add support for addresses

--- a/deploy/cr-instance.yaml
+++ b/deploy/cr-instance.yaml
@@ -3,12 +3,12 @@ kind: "Instance"
 metadata:
   name: "example"
 spec:
-  projectID: pgtm-pczarkowski
+  projectID: <gcp-project-id>
   payload:
     zone: us-central1-a
-    name: test
+    name: example
     description: test instance
-    machineType: https://www.googleapis.com/compute/v1/projects/pgtm-pczarkowski/zones/us-central1-a/machineTypes/custom-2-4096
+    machineType: https://www.googleapis.com/compute/v1/projects/<gcp-project-id>/zones/us-central1-a/machineTypes/custom-2-4096
     disks:
       - type: PERSISTENT
         boot: true
@@ -17,4 +17,4 @@ spec:
           diskName: example-root
           sourceImage: https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-7-wheezy-v20140606
     networkInterfaces:
-      - network: https://www.googleapis.com/compute/v1/projects/pgtm-pczarkowski/global/networks/default
+      - network: https://www.googleapis.com/compute/v1/projects/<gcp-project-id>/global/networks/default
