--- a/deploy/crd.yaml
+++ b/deploy/crd.yaml
@@ -11,3 +11,17 @@ spec:
     singular: instance
   scope: Namespaced
   version: v1alpha1
+---
+apiVersion: apiextensions.k8s.io/v1beta1
+kind: CustomResourceDefinition
+metadata:
+  name: addresses.cloud.google.com
+spec:
+  group: cloud.google.com
+  names:
+    kind: Address
+    listKind: AddressList
+    plural: addresses
+    singular: address
+  scope: Namespaced
+  version: v1alpha1
