--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,3 +1,3 @@
 apiVersion: cloud.google.com/v1alpha1
-kinds: [Instance,Address]
+kinds: [Instance,Address,TargetPool,FowardingRule]
 projectName: gcp-operator
