--- a/deploy/crd.yaml
+++ b/deploy/crd.yaml
@@ -25,3 +25,31 @@ spec:
     singular: address
   scope: Namespaced
   version: v1alpha1
+---
+apiVersion: apiextensions.k8s.io/v1beta1
+kind: CustomResourceDefinition
+metadata:
+  name: forwardingrules.cloud.google.com
+spec:
+  group: cloud.google.com
+  names:
+    kind: ForwardingRule
+    listKind: ForwardingRuleList
+    plural: forwardingrules
+    singular: forwardingrule
+  scope: Namespaced
+  version: v1alpha1
+---
+apiVersion: apiextensions.k8s.io/v1beta1
+kind: CustomResourceDefinition
+metadata:
+  name: targetpools.cloud.google.com
+spec:
+  group: cloud.google.com
+  names:
+    kind: TargetPool
+    listKind: TargetPoolList
+    plural: targetpools
+    singular: targetpool
+  scope: Namespaced
+  version: v1alpha1
