--- a/deploy/crd.yaml
+++ b/deploy/crd.yaml
@@ -53,3 +53,31 @@ spec:
     singular: targetpool
   scope: Namespaced
   version: v1alpha1
+---
+apiVersion: apiextensions.k8s.io/v1beta1
+kind: CustomResourceDefinition
+metadata:
+  name: networks.cloud.google.com
+spec:
+  group: cloud.google.com
+  names:
+    kind: Network
+    listKind: NetworkList
+    plural: networks
+    singular: network
+  scope: Namespaced
+  version: v1alpha1
+---
+apiVersion: apiextensions.k8s.io/v1beta1
+kind: CustomResourceDefinition
+metadata:
+  name: subnetworks.cloud.google.com
+spec:
+  group: cloud.google.com
+  names:
+    kind: Subnetwork
+    listKind: SubnetworkList
+    plural: subnetworks
+    singular: subnetwork
+  scope: Namespaced
+  version: v1alpha1
