--- a/deploy/crd.yaml
+++ b/deploy/crd.yaml
@@ -81,3 +81,31 @@ spec:
     singular: subnetwork
   scope: Namespaced
   version: v1alpha1
+---
+apiVersion: apiextensions.k8s.io/v1beta1
+kind: CustomResourceDefinition
+metadata:
+  name: images.cloud.google.com
+spec:
+  group: cloud.google.com
+  names:
+    kind: Image
+    listKind: ImageList
+    plural: images
+    singular: image
+  scope: Namespaced
+  version: v1alpha1
+---
+apiVersion: apiextensions.k8s.io/v1beta1
+kind: CustomResourceDefinition
+metadata:
+  name: firewalls.cloud.google.com
+spec:
+  group: cloud.google.com
+  names:
+    kind: Firewall
+    listKind: FirewallList
+    plural: firewalls
+    singular: firewall
+  scope: Namespaced
+  version: v1alpha1
